crates/rtf-orchestrator-ui/src/templates/snapshots/rtf_orchestrator_ui__templates__test_plan_detail__tests__overview_snapshot_details_failed.snap
---
source: crates/rtf-orchestrator-ui/src/templates/test_plan_detail.rs
expression: render_fragment!(details_failed().as_overview())
---




<p class="error-box">Could not load details for this test plan.</p>
