crates/rtf-orchestrator-ui/src/templates/snapshots/rtf_orchestrator_ui__templates__test_plan_detail__tests__plan_header_snapshot_without_details.snap
---
source: crates/rtf-orchestrator-ui/src/templates/test_plan_detail.rs
expression: render_fragment!(details_failed().as_plan_header())
---

<div class="card">
    <h2>my-known-test-plan</h2>
    
    <p>a sample known test plan</p>
    
    <p class="muted location">
        <a href="https://github.com/apollographql/runtime-testing-framework/blob/HEAD/test-plans/example.yaml" target="_blank" rel="noopener noreferrer">apollographql/runtime-testing-framework/test-plans/example.yaml &#8599;</a>
    </p>
    <dl>
        
        
        <dt>Namespace write access</dt>
        <dd>Disabled</dd>
    </dl>
</div>
