crates/rtf-orchestrator-ui/src/templates/snapshots/rtf_orchestrator_ui__templates__test_plan_detail__tests__runs_snapshot_runs_failed.snap
---
source: crates/rtf-orchestrator-ui/src/templates/test_plan_detail.rs
expression: render_fragment!(t.as_runs())
---

<h2>Recent runs</h2>



<p class="error-box">Could not load recent runs for this test plan.</p>
