crates/rtf-orchestrator-ui/src/templates/snapshots/rtf_orchestrator_ui__templates__test_plan_detail__tests__trigger_form_snapshot_with_error_and_variables.snap
---
source: crates/rtf-orchestrator-ui/src/templates/test_plan_detail.rs
expression: "render_fragment!(preview::test_plan_detail_trigger_error().as_trigger_form())"
---


<h2>Trigger a run</h2>



<p class="error-box">Variables must be a JSON object: trailing comma at line 1 column 24</p>



<form method="post" action="/ui/test-plan/00000000-0000-0000-0000-00000000000a/trigger" id="trigger-form">
    <p class="trigger-actions">
        <button type="submit" class="primary" id="trigger-btn">Trigger <span id="trigger-count">8</span> executions</button>
        <span class="muted">Runs every variable at its current value below unless you customize it.</span>
    </p>
    <input type="hidden" name="ref" value="" />
    <input type="hidden" name="days_back" value="30" />
    <input type="hidden" name="days" value="30" />
</form>

<details id="customize-trigger" class="card" open>
    <summary>Customize ref &amp; variables</summary>

    <form method="get" action="/ui/test-plan/00000000-0000-0000-0000-00000000000a">
        <input type="hidden" name="days_back" value="30" />
        <input type="hidden" name="days" value="30" />
        <p>
            <label for="ref-preview">Ref <span class="muted">(optional &mdash; branch, tag, or SHA; defaults
                    to the default branch)</span></label><br>
            <input id="ref-preview" name="trigger_ref" type="text" placeholder="main" value="" size="40" />
            <button type="submit">Preview</button>
        </p>
    </form>

    <p class="muted">Leave a field blank to run it at the current value shown as ghost text
        &mdash; if that's cut off, use the button beside a field to see and copy the full value.
        Enter a single value to fix it, or a comma-separated list to run it as a matrix dimension
        &mdash; any variable can be either.</p>

    <div id="all-vars" class="var-field-grid">
        
        <div class="var-field">
            <label for="var-duration">
                <code>duration</code>
                
                <span class="muted">(scenario)</span>
                
                <button type="button" class="copy-btn" popovertarget="value-popover-duration"
                    data-copy="60s" aria-label="View and copy current value of duration"
                    title="View and copy full current value">
                    <svg viewBox="0 0 16 16" width="14" height="14" fill="none" stroke="currentColor"
                        stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round">
                        <path d="M1 8s2.5-4.5 7-4.5S15 8 15 8s-2.5 4.5-7 4.5S1 8 1 8z"></path>
                        <circle cx="8" cy="8" r="2"></circle>
                    </svg>
                </button>
            </label><br>
            
            <span class="muted">Main test duration</span><br>
            
            
            <input type="text" id="var-duration" data-var-name="duration" placeholder="60s" />
            
            <div id="value-popover-duration" popover>
                <p class="muted" style="margin-top:0;">Current value of <code>duration</code></p>
                <pre><code>60s</code></pre>
                <p><button type="button" popovertarget="value-popover-duration" popovertargetaction="hide">Close</button></p>
            </div>
        </div>
        
        <div class="var-field">
            <label for="var-region">
                <code>region</code>
                
                <span class="muted">(environment)</span>
                
                <button type="button" class="copy-btn" popovertarget="value-popover-region"
                    data-copy="us-east-1, eu-west-1" aria-label="View and copy current value of region"
                    title="View and copy full current value">
                    <svg viewBox="0 0 16 16" width="14" height="14" fill="none" stroke="currentColor"
                        stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round">
                        <path d="M1 8s2.5-4.5 7-4.5S15 8 15 8s-2.5 4.5-7 4.5S1 8 1 8z"></path>
                        <circle cx="8" cy="8" r="2"></circle>
                    </svg>
                </button>
            </label><br>
            
            <span class="muted">Where to run</span><br>
            
            
            <input type="text" id="var-region" data-var-name="region" placeholder="us-east-1, eu-west-1" />
            
            <div id="value-popover-region" popover>
                <p class="muted" style="margin-top:0;">Current value of <code>region</code></p>
                <pre><code>us-east-1
eu-west-1</code></pre>
                <p><button type="button" popovertarget="value-popover-region" popovertargetaction="hide">Close</button></p>
            </div>
        </div>
        
        <div class="var-field">
            <label for="var-tier">
                <code>tier</code>
                
                <span class="muted">(environment)</span>
                
                <button type="button" class="copy-btn" popovertarget="value-popover-tier"
                    data-copy="free" aria-label="View and copy current value of tier"
                    title="View and copy full current value">
                    <svg viewBox="0 0 16 16" width="14" height="14" fill="none" stroke="currentColor"
                        stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round">
                        <path d="M1 8s2.5-4.5 7-4.5S15 8 15 8s-2.5 4.5-7 4.5S1 8 1 8z"></path>
                        <circle cx="8" cy="8" r="2"></circle>
                    </svg>
                </button>
            </label><br>
            
            <span class="muted">Service tier</span><br>
            
            
            <select multiple id="var-tier" data-var-name="tier">
                
                <option value="free" selected>free</option>
                
                <option value="paid" >paid</option>
                
                <option value="enterprise" >enterprise</option>
                
            </select>
            
            <div id="value-popover-tier" popover>
                <p class="muted" style="margin-top:0;">Current value of <code>tier</code></p>
                <pre><code>free</code></pre>
                <p><button type="button" popovertarget="value-popover-tier" popovertargetaction="hide">Close</button></p>
            </div>
        </div>
        
    </div>

    <details open>
        <summary>Advanced: raw variables JSON</summary>
        <p class="muted" style="margin-bottom:0.3rem;">Auto-generated from the fields above &mdash;
            edit directly for anything not covered by them.</p>
        <textarea id="variables" name="variables" form="trigger-form" rows="6" cols="60" autofocus>{&#34;region&#34;: &#34;us-east-1&#34;,}</textarea>
    </details>
</details>
